--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.9.1
 bleach==6.2.0
 Django==5.2.4
 django-summernote==0.8.20.0
+gunicorn==23.0.0
+packaging==25.0
 sqlparse==0.5.3
 tzdata==2025.2
 webencodings==0.5.1
