--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.9.1
 bleach==6.2.0
 Django==5.2.4
+django-allauth==65.10.0
 django-summernote==0.8.20.0
 gunicorn==23.0.0
 packaging==25.0
