--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.9.1
 bleach==6.2.0
+dj-database-url==2.2.0
 Django==5.2.4
 django-allauth==65.10.0
 django-summernote==0.8.20.0
 gunicorn==23.0.0
 packaging==25.0
+postgres==4.0
+psycopg2-binary==2.9.10
+psycopg2-pool==1.2
 sqlparse==0.5.3
 tzdata==2025.2
 webencodings==0.5.1
